2018-02-28  Ian Adams

	* arts-2-3-974

	* ChangeLog entry added on behalf of Ian.

	* src/m_montecarlo.cc, src/montecarlo.cc:

	Enhancements to MCRadar: Fixes range bin displacement.
	Adjusts photon scaling.

2018-02-28  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-973

	* src/interactive_workspace.{cc,h} (InteractiveWorkspace):

	Add verbosity parameters to constructor.

	Remove member verbosity_ as it was only used in the constructor.

	* src/arts_api.{cc,h} (create_workspace):

	Add verbosity parameters.

	* src/messages.h (Verbosity):

	Change type of Verbosity member to constant reference. Avoids lots of
	copying of Verbosity objects.

	* src/doit.cc (doit_scat_fieldNormalize):

	Adapt out level switching since ArtsOut objects cannot be copied
	anymore due to change in messages.h.

2018-02-26  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-972

	* src/m_psd.cc (psdF07): NaNs in PSD were obtained for extremly
	small values, such as 1e-96. Now all SWC below 1e-15 is considered
	to be zero.

2018-02-26  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-971

	* src/m_ppath.cc (ppathPlaneParallel): Managed to commit with a
	remaining typo in the code.

2018-02-26  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-970

	* src/m_ppath.cc (ppathPlaneParallel): Just started.

2018-02-23  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-969

	* src/gridded_fields.{cc,h}: End of line added to
	higher order fields when printing.

	* src/linefunctions.cc:  Added Linefunctions::set_lineshape
	to compute the line shape

	* src/linescaling.cc:  Forgot a minus sign...

	* src/m_radiation_field.cc:  Now also deals with the transmission
	field required by NLTE computations.  Also changed how the integration
	happens to a separate function, removing some of the optional
	arguments I introduced before.  Again, no one should be using these
	functions yet as they just serve to prototype necessary input/output